# rust_ecommerce

./: Cargo.toml  docker-compose.yml
ecommerce/: DATABASE_SETUP.md  README.md
ecommerce/migrations/: 001_create_users.sql  002_create_products.sql  003_create_cart_items.sql  004_create_orders.sql  005_create_order_items.sql
ecommerce/src/: main.rs
ecommerce/src/handlers/: mod.rs  order.rs  payment.rs  user.rs
ecommerce/src/models/: cart.rs  order.rs  user.rs
ecommerce/src/routes/: cart.rs  order.rs  payment.rs  user.rs
ecommerce/src/services/: database.rs  mod.rs  payment.rs
migrations/: 20260225020000_init_schema.sql
src/handlers/: cart.rs  health.rs  order.rs  payment.rs  product.rs  user.rs
src/models/: mod.rs  product.rs
src/routes/: health.rs  mod.rs  order.rs  product.rs  user.rs
src/services/: payment.rs
